# dex_stats_pymongo

./: Dockerfile  README.md  data_fetcher.py  db_connector.py  db_parser.py  docker-compose.yml  parse_swaps_db.py  prices_endpoint.py  pymongo_observer.py  pyproject.toml  requirements.txt  start_api.py  temp_graph_data.py  temp_graph_data_2.py
app/: main.py  tasks.py
app/dex_stats/: fetcher.py  mongoAPI.py  parser.py
app/dex_stats/db/: config.py  mongo_utils.py
app/dex_stats/utils/: adex_calls.py  adex_tickers.py  batch_params.py  enable_coins.py
dex_stats/: Fetcher.py  MongoAPI.py  Observer.py  Parser.py  ParserError.py  parsing_cycle.sh
dex_stats/utils/: adex_calls.py  adex_tickers.py  get_orderbooks.py  rpc_lib.py  swap_events.py  utils.py
mm2conf/: MM2.json  coins
qa/: conftest.py  test_api.py
qa/pytest_utils/: utils.py
tests/: endpointconf.json  test_api.py
utils/: adex_calls.py  batch_params.py  enable_coins.py  get_orderbooks.py  swap_events.py  util_funct.py
