[tool.poetry]
name = "dex-stats"
version = "0.1.0"
description = "Stats for atomicDEX-API"
authors = [
            "Anton \"TonyL\" Lysakov <tlysakov@gmail.com>",
            "SirSevenG <ottonseven@gmail.com>",
            "dathbezumniy <gdath100500@gmail.com>" 
          ]
license = "MIT"
repository = "https://github.com/tonymorony/dex_stats_pymongo.git"



[tool.poetry.dependencies]
python = "^3.8"
watchdog = "^0.10.3"
requests = "^2.25.0"
pymongo = "^3.11.0"
fastapi = "^0.61.2"
numpy = "^1.19.4"
uvicorn = "^0.12.2"
gunicorn = "^20.0.4"
motor = "^2.3.0"
uvloop = "^0.14.0"
httptools = "^0.1.1"
celery = "^5.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
